codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_daemon_started.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 401
expression: rendered
---
• Background server started. Run `codex agents` in another terminal; this session remains unchanged.
